@@ -1,0 +1,3 @@
+//XTEC ************ FITXERS AFEGITS
+
+quota_control.js
